force-app/main/default/objects/Group_Disruption__c/Group_Disruption__c.object-meta.xml
<CustomObject>
    <label>Group Disruption</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Disruption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Disruptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>