force-app/main/default/objects/Group_Disruption__c/fields/Customer_Impact_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact_Resolve__c</fullName>
    <label>Customer Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>