force-app/main/default/objects/Group_Disruption__c/fields/Elapsed_Days_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days_Resolve__c</fullName>
    <formula>TODAY() -Due_Date_Resolve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>