force-app/main/default/objects/Group_Disruption__c/fields/Failure_Code_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Code</label>
    <type>TextArea</type>
</CustomField>