force-app/main/default/objects/Group_Disruption__c/fields/Number_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Number_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>