force-app/main/default/objects/Group_Disruption__c/fields/Resolve_Created_by_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Created_by_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Created by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>